Kubernetes/namespace-csharpwars.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
