Kubernetes/deployment-csharpwars-orleans-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csharpwars-orleans-host
  labels:
    app: csharpwars-orleans-host
spec:
  selector:
    matchLabels:
      app: csharpwars-orleans-host
  replicas: 3
  template:
    metadata:
      labels:
        app: csharpwars-orleans-host
        orleans/serviceId: csharpwars-orleans-host
        orleans/clusterId: csharpwars-orleans-host
    spec:
      containers:
        - name: main
          image: csharpwars.azurecr.io/csharpwars-orleans-host:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 11111
          - containerPort: 30000
          - containerPort: 8080
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
