Kubernetes/deployment-csharpwars-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csharpwars-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csharpwars-web
  template:
    metadata:
      labels:
        app: csharpwars-web
    spec:
      containers:
      - name: csharpwars-web
        image: csharpwars.azurecr.io/csharpwars-web:latest
        ports:
        - containerPort: 80
