Kubernetes/service-csharpwars-orleans-host.yaml
apiVersion: v1
kind: Service
metadata:
  name: csharpwars-orleans-host
spec:
  selector:
    app: csharpwars-orleans-host
  ports:
  - port: 80
    targetPort: 8080
