Kubernetes/service-csharpwars-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: csharpwars-web
spec:
  selector:
    app: csharpwars-web
  ports:
  - port: 80
    targetPort: 80
