Kubernetes/service-csharpwars-webapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: csharpwars-webapi
spec:
  selector:
    app: csharpwars-webapi
  ports:
  - port: 80
    targetPort: 80
