Kubernetes/ingress-csharpwars.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-csharpwars
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: csharpwars.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: csharpwars-webapi
            port:
              number: 80
      - path: /web/(.*)
        pathType: Prefix
        backend:
          service:
            name: csharpwars-web
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: csharpwars-orleans-host
            port:
              number: 80
